# Generate-C

./: C.hs  CGen.hs  LICENSE  Makefile  README  TODO  Test.hs  TypeLists.hs  generate-c.cabal
Language/C/: Generate.hs
Language/C/Generate/: Generate.hs  Stdlib.hs  TypeLists.hs
examples/: Array.hs  Fac.hs  Makefile  Struct.hs
src/Language/C/: Generate.hs
src/Language/C/Generate/: Stdlib.hs  TypeLists.hs
tests/: Test.hs
