Name: Generate-C
Version: 0.1.0
Synopsis: Embedded C code generation DSL
Description:
    Embedded C-code generation DSL. The intention of this package is to provide
    a reasonably typesafe way to generate C code from within Haskell. It uses
    Haskell's type inference so that you do not always have to provide explicit
    types for your C code and also makes sure that the programs generated are
    type correct.  The package does not support the full C language. If you
    feel that something is missing, please send a patch or ask me nicely.
License: BSD3
License-file: LICENSE
Author: Olle Fredriksson
Maintainer: fredriksson.olle@gmail.com
Copyright: (c) 2012 Olle Fredriksson
Stability: Experimental
Category: Language, Code Generation
Build-type: Simple
Extra-source-files: README
                  -- examples/...
Cabal-version: >= 1.6
Library
    Build-depends:   base < 6
                   , transformers == 0.2.*
    Exposed-modules: Language.C.Generate
                   , Language.C.Generate.Stdlib
    Other-modules:   Language.C.Generate.Generate
    GHC-Options:     -Wall
